maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:20: error: ';' expected but 'while' found.
        droite()} while(sommeAngle!=0 && !isDirectionFree(Direction.NORTH))  
                  ^PledgeMaze:22: error: 'while' expected but identifier found.
    prendBiscuit()
    ^PledgeMaze:23: error: '(' expected but '}' found.
  }
  ^